# BitcoinResearch

./: .babelrc  .dockerignore  .env  .eslintrc  .gitignore  .prettierrc.json  Dockerfile-app  README.md  Sessions.md  codeship-services.yml  docker-compose.yml  event-sourcing.md  foo.js  global.d.ts  jest.config.js  lerna.json  next.config.js  package-lock.json  package.json  tsconfig.json  tslint.json  types.d.ts
.next/: commons.js  manifest.js
__tests__/: index.test.js
api/: .babelrc  .eslintrc  Dockerfile  config.js  gulpfile.babel.js  gulpfile.js  gulpfile.ls  package-lock.json  package.json
app/: .babelrc  .eslintrc  .gitignore  Dockerfile  gulpfile.ls  next.config.js  package-lock.json  package.json  server.js
common/: array.js  array.test.js  crypto.ts  environment.ts  errors.js  log.js  memoize.js  memoize.ts  memoizeAsync.js  ohlcv.js  package-lock.json  package.json  poloniex.ts  promise.js  promise.ts  string.js  technical-analysis.js  tsconfig.json
commonLibrary/: authentication.js  database.js  passport.js
components/: footer.js  header.js  (+1 more)
services/__python-api/: Dockerfile  pyproject.toml
services/python-api/: .gitignore  Dockerfile  pyproject.toml
services/python-api/python_api/: __main__.py
services/python-api/src/common/technical-analysis/: keltner-channel.js
services/python-api/src/common/tensorflow/tf/checkpoints/: my_checkpoint.index
services/python-api/src/common/tensorflow/tf/models/test1/1549899368/variables/: variables.index
services/python-api/src/common/tensorflow/tf/models/test1/1550136910/variables/: variables.index
(+1493 files in other folders)
