[tool.poetry]
name = "python-api"
version = "0.1.0"
description = ""
authors = ["Tom Wieland <tom.wieland@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
jinja2 = "^2.10"
aiohttp = "^3.6"
cchardet = "^2.1"
aiodns = "^2.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
