[tool.poetry]
name = "python-api"
version = "0.1.0"
description = ""
authors = ["Tom Wieland <tom.wieland@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
jinja2 = "^2.10"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
